Bug 151745 - Resizing window with Meta+left/right arrow puts Sidebar into glitchy state in Calc
Summary: Resizing window with Meta+left/right arrow puts Sidebar into glitchy state in...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
7.4.0.3 release
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:7.6.0 target:7.5.2
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Sidebar
  Show dependency treegraph
 
Reported: 2022-10-25 08:53 UTC by Buovjaga
Modified: 2023-03-22 16:02 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Calc window after steps applied, at the bibisected commit (251.93 KB, image/png)
2022-10-27 14:16 UTC, Gabor Kelemen (Collabora)
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Buovjaga 2022-10-25 08:53:28 UTC
1. Open Calc (Windows or Linux), maximum window size
2. Resize Sidebar to maximum width
3. Hit Meta+right arrow

Hover over the Sidebar and see the Sidebar elements bleed over the spreadsheet canvas.

Bibisected with linux-64-7.4 to
https://git.libreoffice.org/core/commit/d0cacf09a1105d89bf3df84b18623d790e3aeb82
tdf#99708 Save formula bar height to document
Comment 1 Gabor Kelemen (Collabora) 2022-10-27 14:16:39 UTC
Created attachment 183295 [details]
Calc window after steps applied, at the bibisected commit

Confirming in 

Version: 7.5.0.0.alpha0+ / LibreOffice Community
Build ID: f3a82a8ba51195cf31b0f78164735acc7ebbcd2f
CPU threads: 8; OS: Linux 5.4; UI render: default; VCL: x11
Locale: hu-HU (hu_HU.UTF-8); UI: en-US
Calc: threaded

with gen, qt5 backends, but not GTK3.
Comment 2 Buovjaga 2022-10-27 14:18:32 UTC
(In reply to Gabor Kelemen (allotropia) from comment #1)
> with gen, qt5 backends, but not GTK3.

It is visible with gtk3, but not in such a pronounced distance.
Comment 3 Samuel Mehrbrodt 2022-11-03 12:54:54 UTC
Not sure how my changes could have caused this, maybe it just triggered some existing bug in the sidebar redraw routine.

@Caolan: Any idea where the problem might be?
Comment 4 Commit Notification 2023-02-23 07:07:51 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/228caa2bafe214a0b502db4ac288dd70169ac2b8

tdf#151745 Fix input line redraw issue after resizing calc window

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2023-02-23 10:05:10 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-5":

https://git.libreoffice.org/core/commit/505bb358c0cda60577ceb47daa0347b219b6c147

tdf#151745 Fix input line redraw issue after resizing calc window

It will be available in 7.5.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Buovjaga 2023-03-22 16:02:14 UTC
Belated verification :)

Arch Linux 64-bit, X11
Version: 7.6.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 74f398bb58510087cc4a11bb2253715771a2c6b2
CPU threads: 8; OS: Linux 6.2; UI render: default; VCL: kf5 (cairo+xcb)
Locale: fi-FI (fi_FI.UTF-8); UI: en-US
Calc: threaded
Built on 22 March 2023