tdf#151745 Fix input line redraw issue after resizing calc window

Change-Id: Ia8a7e1ab6b68f10f19733d8ce7f36d9ea02d4785
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/147352
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>